# Python_crawel

./: pyproject.toml
Lesson2_20251108/: Practice_1108_01.py  Practice_1108_02.ipynb  Practice_1108_運算式.ipynb
Lesson3_20251115/: lesson3.ipynb
Lesson5_20251129/: lesson5_1結構化.py
Lesson6_20251206/: lesson6_1.ipynb  lesson6_2.py
Lesson7_1/: Agent.md  mail.py  main.py
Lesson7_1_1/: fetch_rate.py  main.py
Lesson7_20251213/: lesson7_3.py  lesson7_5_currency.py
Practice_20251108/: Practice_1108_02.ipynb  Practice_1108_運算式.ipynb
Practice_20251115/: lesson3.ipynb  lesson3_practice.ipynb  lesson3_practice.py
Practice_20251129/: lesson5_2.py  lesson5_2_THSR結構化.py  lessson5_1.py
Practice_20251206/: lesson6_1.ipynb  lesson6_2.ipynb
