[project]
name = "Commander"
version = "0.1.0"
description = "職能發展學院"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.7.7",
    "ipykernel>=7.1.0",
    "nest>=0.4.4",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "streamlit>=1.52.1",
]
